# journey

./: .gitmodules  CMakeLists.txt  Makefile  README.md
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
shader/: basic.frag  basic.vert
src/: Diagnose.h  Mesh.h  Model.h  Program.h  Shader.h  main.cpp  model.cpp
